// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`brush interactive PTY repaint > Enter preserves scrollback; history and word-edit work 1`] = `
"# startup prompt
cursor=5,0
01|AOS$
02|
03|
04|
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|"
`;

exports[`brush interactive PTY repaint > Enter preserves scrollback; history and word-edit work 2`] = `
"# after three commands (scrollback intact)
cursor=5,9
01|AOS$ echo alpha
02|alpha
03|
04|AOS$ echo bravo
05|bravo
06|
07|AOS$ echo charlie
08|charlie
09|
10|AOS$
11|
12|
13|
14|"
`;

exports[`brush interactive PTY repaint > Enter preserves scrollback; history and word-edit work 3`] = `
"# after up-arrow recall
cursor=17,9
01|AOS$ echo alpha
02|alpha
03|
04|AOS$ echo bravo
05|bravo
06|
07|AOS$ echo charlie
08|charlie
09|
10|AOS$ echo charlie
11|
12|
13|
14|"
`;

exports[`brush interactive PTY repaint > Enter preserves scrollback; history and word-edit work 4`] = `
"# after ctrl-w edit + enter
cursor=5,12
01|AOS$ echo alpha
02|alpha
03|
04|AOS$ echo bravo
05|bravo
06|
07|AOS$ echo charlie
08|charlie
09|
10|AOS$ echo delta
11|delta
12|
13|AOS$
14|"
`;
